@@ -28,6 +28,7 @@ include_once(dirname(__file__) . '/packetery.class.php');
 class PacketeryApi
 {
     const API_WSDL_URL = 'https://www.zasilkovna.cz/api/soap-php-bugfix.wsdl';
+    const PACKET_WEIGHT_UNIT = 'kg';
 
     /*LABELS*/
     public static function downloadPdfAjax()
@@ -323,6 +324,10 @@ class PacketeryApi
             'value' => $total,
             'eshop' => $shop_name,
         );
+
+        if (Configuration::get('PS_WEIGHT_UNIT') === self::PACKET_WEIGHT_UNIT) {
+            $packet_attributes['weight'] = $order->getTotalWeight();
+        }
 
         if ($packetery_order['is_carrier']) {
             $packet_attributes['carrierPickupPoint'] = $packetery_order['carrier_pickup_point'];
